# Clinica_Medica-PRIN2025

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/clinica/: admin.py  models.py  serializers.py  urls.py  views.py
backend/clinica/migrations/: 0001_initial.py
backend/clinica/models/: Atendente.py  Consulta.py  Especialidade.py  Exame.py  Fornecedor.py  Medicamento.py  Medico.py  Paciente.py  Receita.py  Sala.py  __init__.py
backend/clinica/serializers/: Especialidade.py
backend/config/: settings.py  urls.py
