[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pauloartur123", email = "pauloartur.ifc@gmail.com"},
]
dependencies = ["django>=5.2.3", "djangorestframework>=3.16.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
